updated rest helper new client, webdriver"